fixed: tags scroll top z-index

--- a/src/components/HideMenuOnScroll/style.scss
+++ b/src/components/HideMenuOnScroll/style.scss
@@ -9,6 +9,7 @@
   width: 100%;
   display: block;
   transition: top 0.3s;
+  z-index: 1;
   a {
     height: 3rem;
     display: flex;
